--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,13 @@
 body {
     font-family: 'Noto Sans JP', sans-serif;
-    padding: 20px 60px;
-}
-
-a {
+    padding: 20px 40px;
+  }
+  
+  a {
     text-decoration: none;
     color: black;
-}
+  }
+  
+  * {
+    box-sizing: border-box;
+  }
