--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -1,3 +1,4 @@
+
 .header {
   height: 70px;
   width: 100%;
@@ -20,6 +21,7 @@
 
     .option {
       padding: 10px 15px;
+      cursor: pointer;
     }
   }
 }
