added addItem and removeItem arrows on our checkout page

--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -20,6 +20,15 @@
     .quantity,
     .price {
       width: 23%;
+      display: flex;
+
+      .arrow {
+        cursor: pointer;
+      }
+
+      .value {
+        margin: 0 10px;
+      }
     }
   
     .quantity {
